# fuzzy_match

./: CHANGES.md  README.md  fuzzy_match.opam
match/src/: dune  fuzzy_match.mli
match/test/: dune
search/: README.md
search/src/: dune  fuzzy_search.ml  fuzzy_search.mli  fuzzy_search_intf.ml
src/: dune  fuzzy_match.ml
test/: dune  fuzzy_match_test.ml
