opam-version: "2.0"
version: "v0.15.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/fuzzy_match"
bug-reports: "https://github.com/janestreet/fuzzy_match/issues"
dev-repo: "git+https://github.com/janestreet/fuzzy_match.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/fuzzy_match/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "4.08.0"}
  "core"     {>= "v0.15" & < "v0.16"}
  "ppx_jane" {>= "v0.15" & < "v0.16"}
  "dune"     {>= "2.0.0"}
]
synopsis: "A library for fuzzy string matching"
description: "
A library for fuzzy string matching
"
