opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/fuzzy_match"
bug-reports: "https://github.com/janestreet/fuzzy_match/issues"
dev-repo: "git+https://github.com/janestreet/fuzzy_match.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/fuzzy_match/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "ppx_jane"
  "dune"     {>= "3.11.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Libraries for fuzzy string matching"
description: "
Libraries for fuzzy string matching
"
